Added Stats Button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="developer-info">Developed by Derek Wen</div>
+  <div id="developer-info">
+    Developed by Derek Wen
+    <button id="toggle-stats">Show Stats</button>
+  </div>
   <div id="word-container"></div>
+  <!-- Stats display below the word container -->
+  <div id="stats-display" style="display: none;">Accuracy: 100% | WPM: 0</div>
   <script src="main.js"></script>
 </body>
 </html>
